# ConvLSTMPyTorchLightning

./: .gitignore  3D_ResNet_Results.csv  ColorVideoDataset.py  ConvLSTMCell.py  TVN_results.csv  VideoMAE_Results.csv  colorVideoDataset.py  dataset.ipynb  datasetModule.py  get_batch_time.py  inference.ipynb  main.py  pyproject.toml  testDataset.py  train_tcn_lstm.py  training.py  transferLearning.ipynb  visualisations.ipynb
lightning_logs/version_11/: metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_18/: metrics.csv
lightning_logs/version_20/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_5/: metrics.csv
lightning_logs/version_6/: metrics.csv
lightning_logs/version_9/: metrics.csv
models/: 3dResNet.py  ConvLSTMCell.py  EncoderDecoderCLSTM.py  TCN_With_LSTM.py  TemporalConvCell.py  ThreeDResNet.py  TinyVideoNet.py  VideoMAE_SL.py
models/SelfAttention/: SAConvLstmCell.py  selfAttention.py
raylib_parralellize/: dataloaders.py  distri.py  ray_parallel.py
